--- a/code/src/functions/extraction/zoho/initial_domain_mapping.json
+++ b/code/src/functions/extraction/zoho/initial_domain_mapping.json
@@ -1,1 +1,288 @@
-{}
+{
+    "additional_mappings": {
+        "record_type_mappings": {
+            "issue_comments": {
+                "default_mapping": {
+                    "object_category": "stock",
+                    "object_type": "comment"
+                },
+                "possible_record_type_mappings": [
+                    {
+                        "devrev_leaf_type": "comment",
+                        "forward": true,
+                        "reverse": false,
+                        "shard": {
+                            "constructed_custom_fields": {},
+                            "devrev_leaf_type": {
+                                "object_category": "stock",
+                                "object_type": "comment"
+                            },
+                            "mode": "create_shard",
+                            "stock_field_mappings": {
+                                "body": {
+                                    "forward": true,
+                                    "primary_external_field": "content",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_rich_text"
+                                    }
+                                },
+                                "created_by_id": {
+                                    "forward": true,
+                                    "primary_external_field": "added_by",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                },
+                                "modified_by_id": {
+                                    "forward": true,
+                                    "primary_external_field": "added_by",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                },
+                                "parent_object_id": {
+                                    "forward": true,
+                                    "primary_external_field": "parent_Issue_Id",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                ]
+            },
+            "issues": {
+                "default_mapping": {
+                    "object_category": "stock",
+                    "object_type": "issue"
+                },
+                "possible_record_type_mappings": [
+                    {
+                        "devrev_leaf_type": "issue",
+                        "forward": true,
+                        "reverse": false,
+                        "shard": {
+                            "constructed_custom_fields": {},
+                            "devrev_leaf_type": {
+                                "object_category": "stock",
+                                "object_type": "issue"
+                            },
+                            "mode": "create_shard",
+                            "stock_field_mappings": {
+                                "applies_to_part_id": {
+                                    "forward": true,
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "is_array": false,
+                                        "leaf_type": {
+                                            "object_category": "stock",
+                                            "object_type": "feature"
+                                        },
+                                        "transformation_method": "use_devrev_record"
+                                    }
+                                },
+                                "owned_by_ids": {
+                                    "forward": true,
+                                    "primary_external_field": "assignee",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_as_array_value"
+                                    }
+                                },
+                                "priority": {
+                                    "forward": true,
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "enum": "P1",
+                                        "transformation_method": "use_fixed_value",
+                                        "value": "enum_value"
+                                    }
+                                },
+                                "stage": {
+                                    "forward": true,
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "enum": "duplicate",
+                                        "transformation_method": "use_fixed_value",
+                                        "value": "enum_value"
+                                    }
+                                },
+                                "title": {
+                                    "forward": true,
+                                    "primary_external_field": "title",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                ]
+            },
+            "task_comments": {
+                "default_mapping": {
+                    "object_category": "stock",
+                    "object_type": "comment"
+                },
+                "possible_record_type_mappings": [
+                    {
+                        "devrev_leaf_type": "comment",
+                        "forward": true,
+                        "reverse": false,
+                        "shard": {
+                            "constructed_custom_fields": {},
+                            "devrev_leaf_type": {
+                                "object_category": "stock",
+                                "object_type": "comment"
+                            },
+                            "mode": "create_shard",
+                            "stock_field_mappings": {
+                                "body": {
+                                    "forward": true,
+                                    "primary_external_field": "content",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_rich_text"
+                                    }
+                                },
+                                "created_by_id": {
+                                    "forward": true,
+                                    "primary_external_field": "added_by",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                },
+                                "modified_by_id": {
+                                    "forward": true,
+                                    "primary_external_field": "added_by",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                },
+                                "parent_object_id": {
+                                    "forward": true,
+                                    "primary_external_field": "parent_Task_Id",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                ]
+            },
+            "tasks": {
+                "default_mapping": {
+                    "object_category": "stock",
+                    "object_type": "issue"
+                },
+                "possible_record_type_mappings": [
+                    {
+                        "devrev_leaf_type": "issue",
+                        "forward": true,
+                        "reverse": false,
+                        "shard": {
+                            "constructed_custom_fields": {},
+                            "devrev_leaf_type": {
+                                "object_category": "stock",
+                                "object_type": "issue"
+                            },
+                            "mode": "create_shard",
+                            "stock_field_mappings": {
+                                "applies_to_part_id": {
+                                    "forward": true,
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "is_array": false,
+                                        "leaf_type": {
+                                            "object_category": "stock",
+                                            "object_type": "feature"
+                                        },
+                                        "transformation_method": "use_devrev_record"
+                                    }
+                                },
+                                "owned_by_ids": {
+                                    "forward": true,
+                                    "primary_external_field": "owners",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                },
+                                "priority": {
+                                    "forward": true,
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "enum": "P1",
+                                        "transformation_method": "use_fixed_value",
+                                        "value": "enum_value"
+                                    }
+                                },
+                                "stage": {
+                                    "forward": true,
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "enum": "duplicate",
+                                        "transformation_method": "use_fixed_value",
+                                        "value": "enum_value"
+                                    }
+                                },
+                                "title": {
+                                    "forward": true,
+                                    "primary_external_field": "name",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                ]
+            },
+            "users": {
+                "default_mapping": {
+                    "object_category": "stock",
+                    "object_type": "devu"
+                },
+                "possible_record_type_mappings": [
+                    {
+                        "devrev_leaf_type": "devu",
+                        "forward": true,
+                        "reverse": false,
+                        "shard": {
+                            "constructed_custom_fields": {},
+                            "devrev_leaf_type": {
+                                "object_category": "stock",
+                                "object_type": "devu"
+                            },
+                            "mode": "create_shard",
+                            "stock_field_mappings": {
+                                "display_name": {
+                                    "forward": true,
+                                    "primary_external_field": "name",
+                                    "reverse": false,
+                                    "transformation_method": {
+                                        "transformation_method": "use_directly"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                ]
+            }
+        }
+    },
+    "_dev_external_system_type": "ADaaS",
+    "_dev_snap_in_slug": "lhjj",
+    "_dev_import_slug": "airdrop-zoho-projects-snapin-extractor"
+}
