--- a/manifest.yaml
+++ b/manifest.yaml
@@ -63,7 +63,7 @@ keyring_types:
         "client_id": "[CLIENT_ID]"
         "client_secret": "[CLIENT_SECRET]"
         "refresh_token": "[REFRESH_TOKEN]"
-        "grant_type": "authorization_code"
+        "grant_type": "refresh_token"
       headers:
         "Content-type": "application/x-www-form-urlencoded"
 
